master ansyc fix bugs, add bubble,jump bottom,etc

--- a/chatcore/chat/public/css/userChating.css
+++ b/chatcore/chat/public/css/userChating.css
@@ -1,132 +1,124 @@
 /* Fix user-agent */
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  font-weight: 300;
-  -webkit-font-smoothing: antialiased;
+    font-weight: 300;
+    -webkit-font-smoothing: antialiased;
 }
 
 html, input {
-  font-family:
-    "HelveticaNeue-Light",
-    "Helvetica Neue Light",
-    "Helvetica Neue",
-    Helvetica,
-    Arial,
-    "Lucida Grande",
-    sans-serif;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 html, body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 ul {
-  list-style: none;
-  word-wrap: break-word;
+    list-style: none;
+    word-wrap: break-word;
 }
 
 /* Pages */
 
 .pages {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 .page {
-  height: 100%;
-  position: absolute;
-  width: 100%;
+    height: 100%;
+    position: absolute;
+    width: 100%;
 }
 
 /* Login Page */
 
 .login.page {
-  background-color: #000;
+    background-color: #000;
 }
 
-.login.page .form {
-  height: 100px;
-  margin-top: -100px;
-  position: absolute;
+    .login.page .form {
+        height: 100px;
+        margin-top: -100px;
+        position: absolute;
+        text-align: center;
+        top: 50%;
+        width: 100%;
+    }
 
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
+        .login.page .form .usernameInput {
+            background-color: transparent;
+            border: none;
+            border-bottom: 2px solid #fff;
+            outline: none;
+            padding-bottom: 15px;
+            text-align: center;
+            width: 400px;
+        }
 
-.login.page .form .usernameInput {
-  background-color: transparent;
-  border: none;
-  border-bottom: 2px solid #fff;
-  outline: none;
-  padding-bottom: 15px;
-  text-align: center;
-  width: 400px;
-}
+    .login.page .title {
+        font-size: 200%;
+    }
 
-.login.page .title {
-  font-size: 200%;
-}
+    .login.page .usernameInput {
+        font-size: 200%;
+        letter-spacing: 3px;
+    }
 
-.login.page .usernameInput {
-  font-size: 200%;
-  letter-spacing: 3px;
-}
-
-.login.page .title, .login.page .usernameInput {
-  color: #fff;
-  font-weight: 100;
-}
+    .login.page .title, .login.page .usernameInput {
+        color: #fff;
+        font-weight: 100;
+    }
 
 /* Chat page */
 
 .chat.page {
-  display: none;
+    display: none;
 }
 
 /* Font */
 
 .messages {
-  font-size: 150%;
+    font-size: 150%;
 }
 
 .inputMessage {
-  font-size: 100%;
+    font-size: 100%;
 }
 
 .log {
-  color: gray;
-  font-size: 70%;
-  margin: 5px;
-  text-align: center;
+    color: gray;
+    font-size: 70%;
+    margin: 5px;
+    text-align: center;
 }
 
 /* Messages */
 
 
 .messages {
-  height: 100%;
-  margin: 0;
-  overflow-y: scroll;
-  padding: 10px 20px 10px 20px;
+    height: 100%;
+    margin: 0;
+    overflow-y: scroll;
+    padding: 10px 20px 10px 20px;
 }
 
 .message.typing .messageBody {
-  color: gray;
+    color: gray;
 }
 
 .username {
-  font-weight: 700;
-  overflow: hidden;
-  padding-right: 15px;
-  text-align: right;
+    font-weight: 700;
+    overflow: hidden;
+    padding-right: 15px;
+    text-align: right;
 }
 
 /* Input */
@@ -139,15 +131,17 @@ ul {
     width: 100%;
     padding: 4px 0;
 }
+
 .inputMessage {
-  height: 32px;
-  outline: none;
-  margin-left:2%;
-  border-bottom: 1px solid #c3c3c3;
-  display: inline-block;
-  float: left;
-  margin-top:14px;
+    height: 32px;
+    outline: none;
+    margin-left: 2%;
+    border-bottom: 1px solid #c3c3c3;
+    display: inline-block;
+    float: left;
+    margin-top: 14px;
 }
+
 .fsBtn {
     width: 18%;
     background: #40A700;
@@ -155,12 +149,14 @@ ul {
     border: none;
     outline: none;
     float: left;
-    margin-top:0.4rem;
+    margin-top: 0.4rem;
 }
+
 .noticeBox {
     width: 100%;
     text-align: center;
 }
+
 .noticeMessage {
     display: inline-block;
     padding: 2px 10px;
@@ -171,17 +167,21 @@ ul {
     font-size: 0.6rem;
     margin: 8px 0;
 }
+
 .aui-chat {
     padding: 0 0 60px 0 !important;
-} 
+}
+
 #chatArea {
     /*height: 100%;*/
     margin: 0;
     overflow-y: scroll;
 }
+
 .aui-chat-inner {
     padding: 0 6px;
 }
+
 .memberWrap {
     position: fixed;
     bottom: 54px;
@@ -198,21 +198,24 @@ ul {
 .xfBox {
     width: 1.6rem;
     height: 1.6rem;
+    top: 0.2rem !important;
 }
 
     .xfBox img {
-        width: 100%;
-        height: 100%;
+        width: 130%;
+        height: 130%;
+        max-width: none !important;
     }
 
 .personList {
     display: none;
-    font-size:0.7rem;
-    height:9rem;
+    font-size: 0.7rem;
+    height: 9rem;
     background: rgba(215,215,215,0.8);
     padding-top: 0.4rem;
-    overflow:scroll;
+    overflow: scroll;
 }
+
     .personList li {
         overflow: hidden;
         margin-bottom: 0.4rem;
@@ -222,55 +225,62 @@ ul {
         color: #ffffff;
         position: relative;
     }
+
         .personList li a span {
-            float:left;
+            float: left;
         }
-        
-        .role {
-            background: #ffc107;
-            padding: 0 0.2rem;
-            color: #ffffff;
-            margin: 0 0.2rem;
-            font-size: 0.4rem;
-            position: absolute;
-            right: 0;
-            top: 4px;
-        }
+
+.role {
+    background: #ffc107;
+    padding: 0 0.2rem;
+    color: #ffffff;
+    margin: 0 0.2rem;
+    font-size: 0.4rem;
+    position: absolute;
+    right: 0;
+    top: 4px;
+}
+
 .btnBox span {
     position: absolute;
-    right:-0.4rem;
+    right: -0.4rem;
     top: -0.4rem;
     display: inline-block;
-    background:red;
-    color:#ffffff;
+    background: red;
+    color: #ffffff;
     width: 1rem;
     height: 1rem;
-    border-radius:50%;
+    border-radius: 50%;
     text-align: center;
-    line-height: 1rem;    
+    line-height: 1rem;
     font-size: 0.7rem;
 }
+
 @media screen and (max-width: 320px) {
     .inputMessage {
         width: 68%;
     }
 }
+
 @media screen and (min-width: 340px) and (max-width: 413px) {
     .inputMessage {
         width: 69%;
     }
 }
+
 @media screen and (min-width: 414px) {
     .inputMessage {
         width: 70%;
     }
 }
-.rolePic  img{
+
+.rolePic img {
     border-radius: 50%;
 }
+
 .roleName {
     width: 5rem;
-    margin-left:0.2rem;
+    margin-left: 0.2rem;
     line-height: 30px;
     display: inline-block;
     overflow: hidden; /*自动隐藏文字*/
@@ -278,6 +288,28 @@ ul {
     white-space: nowrap; /*强制不换行*/
     color: black;
 }
+
 #main {
-    max-height:80px;overflow: scroll;
+    max-height: 80px;
+    overflow: scroll;
 }
+
+.messNoticeBox {
+    position: fixed;
+    bottom: 60px;
+    left: 86%;
+    display: none;
+}
+
+    .messNoticeBox img {
+        width: 34px;
+        height: 34px;
+        display: inline-block;
+    }
+
+    .messNoticeBox span {
+        position: absolute;
+        top: 5px;
+        left: 20%;
+        color: #ffffff;
+    }
